infrastructure/manifests/chirpstack/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-chirpstack-to-postgres
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: postgres-server
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: chirpstack-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-chirpstack-to-redis
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: redis-server
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: chirpstack-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-meshed-to-chirpstack-api
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: chirpstack-api
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: chirpstack-identity
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-external-to-chirpstack-ui
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: chirpstack-api
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: external-chirpstack-ui-clients
